<resources>
    <string name="app_name">Chamber of Wizards</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="b_date">Birthday</string>
    <string name="submit">Submit</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="start_discussion">Start a Discussion</string>

    <string name="title">Add a title…</string>
    <string name="discuss">Discuss something…</string>

    <!-- Errors -->
    <string name="fname_error">First name is required</string>
    <string name="lname_error">Last name is required</string>
    <string name="bday_error">Birthday is required</string>

    <string name="person_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>